--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -174,79 +174,153 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 23,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43919ae8-69f1-44df-8156-1751ce4524bc"
+        "outputId": "58159c58-4d56-45dd-e409-2c2d4033039b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------+-------------+\n",
-            "|Year_Sold|Average_PRice|\n",
-            "+---------+-------------+\n",
-            "|     2022|    296363.88|\n",
-            "|     2019|     300263.7|\n",
-            "|     2020|    298353.78|\n",
-            "|     2021|    301819.44|\n",
-            "+---------+-------------+\n",
+            "+------------+---------+\n",
+            "|Year_Sold_4B|Avg_Price|\n",
+            "+------------+---------+\n",
+            "|        2019| 300263.7|\n",
+            "|        2020|298353.78|\n",
+            "|        2021|301819.44|\n",
+            "|        2022|296363.88|\n",
+            "+------------+---------+\n",
             "\n"
           ]
         }
       ],
       "source": [
         "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
-        "spark.sql(\"SELECT YEAR(DATE) as Year_Sold, ROUND(AVG(price),2) AS Average_PRice FROM home_sales_tempview Where BEDROOMS = 4 GROUP BY 1\").show()\n"
+        "spark.sql(\"SELECT YEAR(DATE) as Year_Sold_4B, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE BEDROOMS = 4 GROUP BY 1 ORDER BY 1 ASC\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "l8p_tUS8h8it"
+        "id": "l8p_tUS8h8it",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf7e4a19-95ba-4ea3-f937-d930dd02a2dc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------+---------+\n",
+            "|Home_Built_Year|Avg_Price|\n",
+            "+---------------+---------+\n",
+            "|           2010|292859.62|\n",
+            "|           2011|291117.47|\n",
+            "|           2012|293683.19|\n",
+            "|           2013|295962.27|\n",
+            "|           2014|290852.27|\n",
+            "|           2015| 288770.3|\n",
+            "|           2016|290555.07|\n",
+            "|           2017|292676.79|\n",
+            "+---------------+---------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# 4. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
-        "\n"
+        "spark.sql(\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE bedrooms = 3 AND bathrooms = 3 GROUP BY 1 ORDER BY 1 ASC\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "Y-Eytz64liDU"
+        "id": "Y-Eytz64liDU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f0a64ff-0f07-4d2b-f152-d033d9c4db5b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------+---------+\n",
+            "|Home_Built_Year|Avg_Price|\n",
+            "+---------------+---------+\n",
+            "|           2010|280447.23|\n",
+            "|           2011|281413.45|\n",
+            "|           2012|295858.68|\n",
+            "|           2013|295142.13|\n",
+            "|           2014|294195.13|\n",
+            "|           2015|291788.36|\n",
+            "|           2016| 287812.6|\n",
+            "|           2017|282026.59|\n",
+            "+---------------+---------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# 5. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
         "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
-        "\n"
+        "spark.sql(\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2)AS Avg_Price FROM home_sales_tempview WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_lot >= 2000 GROUP BY 1 ORDER BY 1 ASC\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "0a645986-7179-440c-c0bc-345f1693f8af"
+        "outputId": "074b6f2b-92b6-47f1-f66f-1f1429ec0d54"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 7.200241088867188e-05 seconds ---\n"
+            "+----------------+----------+\n",
+            "|Home_View_Rating| Avg_Price|\n",
+            "+----------------+----------+\n",
+            "|              99|1061201.42|\n",
+            "|              98|1053739.33|\n",
+            "|              97|1129040.15|\n",
+            "|              96|1017815.92|\n",
+            "|              95| 1054325.6|\n",
+            "|              94| 1033536.2|\n",
+            "|              93|1026006.06|\n",
+            "|              92| 970402.55|\n",
+            "|              91|1137372.73|\n",
+            "|              90|1062654.16|\n",
+            "|               9| 401393.34|\n",
+            "|              89|1107839.15|\n",
+            "|              88|1031719.35|\n",
+            "|              87| 1072285.2|\n",
+            "|              86|1070444.25|\n",
+            "|              85|1056336.74|\n",
+            "|              84|1117233.13|\n",
+            "|              83|1033965.93|\n",
+            "|              82| 1063498.0|\n",
+            "|              81|1053472.79|\n",
+            "+----------------+----------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.7825973033905029 seconds ---\n"
           ]
         }
       ],
@@ -257,32 +331,63 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "\n",
+        "spark.sql(\"SELECT view AS Home_View_Rating, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE price>=350000 GROUP BY 1 ORDER BY 1 DESC\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "KAhk3ZD2tFy8"
+        "id": "KAhk3ZD2tFy8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a46e3d22-79bc-4fd4-c3f5-a09334df3d48"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ],
       "source": [
-        "# 7. Cache the the temporary table home_sales.\n"
+        "# 7. Cache the the temporary table home_sales.\n",
+        "spark.sql(\"cache table home_sales_tempview\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "4opVhbvxtL-i"
+        "id": "4opVhbvxtL-i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c497d82-fa62-427a-bcd1-a8cecff0304e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
       "source": [
         "# 8. Check if the table is cached.\n",
-        "spark.catalog.isCached('home_sales')"
+        "spark.catalog.isCached('home_sales_tempview')"
       ]
     },
     {
