latest version of this project

--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -2,29 +2,30 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "04f0ba3e-b3d6-4741-93c0-19ba97870006"
+        "outputId": "f56dc28a-3e59-45b6-a1e3-ed9aa07912bf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com] [Connected to cloud.r-project.org (108.157.173.97)] [Connectin\r                                                                                                    \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Waiting for headers] [Connecting to ppa.laun\r                                                                                                    \rHit:3 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Waiting for headers] [1 InRelease 3,626 B/3,\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Waiting for headers] [Connected to ppa.launc\r                                                                                                    \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Get:3 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
             "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Get:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
+            "Hit:6 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Hit:7 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Hit:8 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
+            "Hit:9 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Hit:10 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "Fetched 261 kB in 2s (125 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -55,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -71,13 +72,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "91dfa56c-0ddf-40f6-b847-cce569a47577"
+        "outputId": "5f43d6c2-8022-442d-b83a-ebef5a4c9083"
       },
       "outputs": [
         {
@@ -135,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vN_tQO2ttZpr",
-        "outputId": "c44ee918-c8f2-4079-dc0a-b7f421837db7"
+        "outputId": "16f9a7a4-30b8-4c15-bf8e-9e26a690b568"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -174,13 +175,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 6,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "58159c58-4d56-45dd-e409-2c2d4033039b"
+        "outputId": "a6d1ebcc-6332-44e3-b247-e598ed879a2c"
       },
       "outputs": [
         {
@@ -206,13 +207,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 7,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bf7e4a19-95ba-4ea3-f937-d930dd02a2dc"
+        "outputId": "18ab3595-47ae-4d2b-ed49-b51aabaad71c"
       },
       "outputs": [
         {
@@ -243,13 +244,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 8,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f0a64ff-0f07-4d2b-f152-d033d9c4db5b"
+        "outputId": "61e7d8f0-443f-4d95-fee8-625357b954da"
       },
       "outputs": [
         {
@@ -281,13 +282,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "074b6f2b-92b6-47f1-f66f-1f1429ec0d54"
+        "outputId": "968653dc-d56b-4971-ba02-0baad862d0d9"
       },
       "outputs": [
         {
@@ -307,7 +308,6 @@
             "|              92| 970402.55|\n",
             "|              91|1137372.73|\n",
             "|              90|1062654.16|\n",
-            "|               9| 401393.34|\n",
             "|              89|1107839.15|\n",
             "|              88|1031719.35|\n",
             "|              87| 1072285.2|\n",
@@ -317,10 +317,11 @@
             "|              83|1033965.93|\n",
             "|              82| 1063498.0|\n",
             "|              81|1053472.79|\n",
+            "|              80| 991767.38|\n",
             "+----------------+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.7825973033905029 seconds ---\n"
+            "--- 0.9928855895996094 seconds ---\n"
           ]
         }
       ],
@@ -331,20 +332,24 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "spark.sql(\"SELECT view AS Home_View_Rating, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE price>=350000 GROUP BY 1 ORDER BY 1 DESC\").show()\n",
+        "# The code below displays the single digit 9 as part of the list\n",
+        "# spark.sql(\"SELECT view AS Home_View_Rating, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE price>=350000 GROUP BY 1 ORDER BY 1 DESC\").show()\n",
+        "\n",
+        "# This line of code sorts correctly by left-padding the values with '0' so that number 9 is considered 09, and be sorted correctly.\n",
+        "spark.sql(\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales_tempview WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 10,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a46e3d22-79bc-4fd4-c3f5-a09334df3d48"
+        "outputId": "43b843c7-6f64-4316-c15c-190827a9d25a"
       },
       "outputs": [
         {
@@ -355,7 +360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 10
         }
       ],
       "source": [
@@ -365,13 +370,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c497d82-fa62-427a-bcd1-a8cecff0304e"
+        "outputId": "61c2fdcd-7421-4873-e61b-5349bec9fda9"
       },
       "outputs": [
         {
@@ -382,7 +387,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 11
         }
       ],
       "source": [
@@ -392,20 +397,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "63c7dc50-d96a-4a48-97b6-91a446cdb973"
+        "outputId": "42094e71-ab6d-4597-dee1-bd1e3289da70"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 5.459785461425781e-05 seconds ---\n"
+            "+----------------+----------+\n",
+            "|Home_View_Rating| Avg_Price|\n",
+            "+----------------+----------+\n",
+            "|              99|1061201.42|\n",
+            "|              98|1053739.33|\n",
+            "|              97|1129040.15|\n",
+            "|              96|1017815.92|\n",
+            "|              95| 1054325.6|\n",
+            "|              94| 1033536.2|\n",
+            "|              93|1026006.06|\n",
+            "|              92| 970402.55|\n",
+            "|              91|1137372.73|\n",
+            "|              90|1062654.16|\n",
+            "|              89|1107839.15|\n",
+            "|              88|1031719.35|\n",
+            "|              87| 1072285.2|\n",
+            "|              86|1070444.25|\n",
+            "|              85|1056336.74|\n",
+            "|              84|1117233.13|\n",
+            "|              83|1033965.93|\n",
+            "|              82| 1063498.0|\n",
+            "|              81|1053472.79|\n",
+            "|              80| 991767.38|\n",
+            "+----------------+----------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.631819486618042 seconds ---\n"
           ]
         }
       ],
@@ -417,7 +448,8 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
-        "\n",
+        "# Repeating the same code as for the previous table\n",
+        "spark.sql(\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales_tempview WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
