--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -8,24 +8,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "f56dc28a-3e59-45b6-a1e3-ed9aa07912bf"
+        "outputId": "d5aca673-72d9-46cb-940c-1ecfaa9a2f79"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Waiting for headers] [1 InRelease 3,626 B/3,\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Waiting for headers] [Connected to ppa.launc\r                                                                                                    \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Get:3 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
-            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
-            "Hit:6 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Hit:7 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:8 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Hit:10 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Fetched 261 kB in 2s (125 kB/s)\n",
+            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.39)] [Connected to cloud.r-\r                                                                                                    \rHit:2 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.39)] [Waiting for headers] \r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "\r0% [Waiting for headers] [Waiting for headers] [Connected to ppa.launchpadcontent.net (185.125.190.8\r                                                                                                    \rHit:4 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "\r0% [Waiting for headers] [Connected to ppa.launchpadcontent.net (185.125.190.80)] [Waiting for heade\r                                                                                                    \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Hit:6 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
+            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
+            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -56,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -67,18 +66,21 @@
         "import time\n",
         "\n",
         "# Create a SparkSession\n",
-        "spark = SparkSession.builder.appName(\"SparkSQL\").getOrCreate()"
+        "spark = SparkSession.builder.appName(\"SparkSQL\").getOrCreate()\n",
+        "\n",
+        "# Create a SparkSession that we can use with Parquet (Commented out in case needing more memory for the partition nodes)\n",
+        "# spark = SparkSession.builder.appName(\"SparkSQL\").config(\"spark.driver.memory\", \"2g\").getOrCreate()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5f43d6c2-8022-442d-b83a-ebef5a4c9083"
+        "outputId": "09984659-ac32-448a-f7c5-e3f96341d29e"
       },
       "outputs": [
         {
@@ -136,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vN_tQO2ttZpr",
-        "outputId": "16f9a7a4-30b8-4c15-bf8e-9e26a690b568"
+        "outputId": "989acfe3-1541-45eb-b48d-b53858a4b70f"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,25 +165,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 20,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
       "outputs": [],
       "source": [
         "# 2. Create a temporary view of the DataFrame.\n",
-        "df.createOrReplaceTempView('home_sales_tempview')\n"
+        "df.createOrReplaceTempView('home_sales')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6d1ebcc-6332-44e3-b247-e598ed879a2c"
+        "outputId": "1b933d65-af54-4dfb-9499-a1628d74189d"
       },
       "outputs": [
         {
@@ -202,18 +204,18 @@
       ],
       "source": [
         "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
-        "spark.sql(\"SELECT YEAR(DATE) as Year_Sold_4B, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE BEDROOMS = 4 GROUP BY 1 ORDER BY 1 ASC\").show()\n"
+        "spark.sql(\"\"\"SELECT YEAR(DATE) as Year_Sold_4B, ROUND(AVG(price),2) AS Avg_Price FROM home_sales WHERE BEDROOMS = 4 GROUP BY 1 ORDER BY 1 ASC\"\"\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 22,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18ab3595-47ae-4d2b-ed49-b51aabaad71c"
+        "outputId": "ddcf92cd-a83d-4965-b784-2591066731e7"
       },
       "outputs": [
         {
@@ -239,18 +241,18 @@
       "source": [
         "# 4. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms and 3 bathrooms, rounded to two decimal places?\n",
-        "spark.sql(\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE bedrooms = 3 AND bathrooms = 3 GROUP BY 1 ORDER BY 1 ASC\").show()\n"
+        "spark.sql(\"\"\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2) AS Avg_Price FROM home_sales WHERE bedrooms = 3 AND bathrooms = 3 GROUP BY 1 ORDER BY 1 ASC\"\"\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 23,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61e7d8f0-443f-4d95-fee8-625357b954da"
+        "outputId": "5899cef8-4ce3-4f73-cbb0-619309fee6aa"
       },
       "outputs": [
         {
@@ -277,18 +279,18 @@
         "# 5. What is the average price of a home for each year the home was built,\n",
         "# that have 3 bedrooms, 3 bathrooms, with two floors,\n",
         "# and are greater than or equal to 2,000 square feet, rounded to two decimal places?\n",
-        "spark.sql(\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2)AS Avg_Price FROM home_sales_tempview WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_lot >= 2000 GROUP BY 1 ORDER BY 1 ASC\").show()\n"
+        "spark.sql(\"\"\"SELECT date_built AS Home_Built_Year, ROUND(AVG(price),2)AS Avg_Price FROM home_sales WHERE bedrooms = 3 AND bathrooms = 3 AND floors = 2 AND sqft_lot >= 2000 GROUP BY 1 ORDER BY 1 ASC\"\"\").show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "968653dc-d56b-4971-ba02-0baad862d0d9"
+        "outputId": "cdde0eb9-20e6-40e1-e415-cd1e2a3bb3a7"
       },
       "outputs": [
         {
@@ -321,7 +323,7 @@
             "+----------------+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.9928855895996094 seconds ---\n"
+            "--- 0.7097053527832031 seconds ---\n"
           ]
         }
       ],
@@ -330,26 +332,28 @@
         "# having an average home price greater than or equal to $350,000? Order by descending view rating.\n",
         "# Although this is a small dataset, determine the run time for this query.\n",
         "\n",
+        "# Get the current time\n",
         "start_time = time.time()\n",
         "\n",
         "# The code below displays the single digit 9 as part of the list\n",
-        "# spark.sql(\"SELECT view AS Home_View_Rating, ROUND(AVG(price),2) AS Avg_Price FROM home_sales_tempview WHERE price>=350000 GROUP BY 1 ORDER BY 1 DESC\").show()\n",
+        "# spark.sql(\"SELECT view AS Home_View_Rating, ROUND(AVG(price),2) AS Avg_Price FROM home_sales WHERE price>=350000 GROUP BY 1 ORDER BY 1 DESC\").show()\n",
         "\n",
-        "# This line of code sorts correctly by left-padding the values with '0' so that number 9 is considered 09, and be sorted correctly.\n",
-        "spark.sql(\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales_tempview WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\").show()\n",
+        "# This line of code runs the query and sorts correctly by left-padding the values with '0' so that number 9 is considered 09, and be sorted correctly.\n",
+        "spark.sql(\"\"\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\"\"\").show()\n",
         "\n",
+        "# Print out the runtime\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 25,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43b843c7-6f64-4316-c15c-190827a9d25a"
+        "outputId": "c821ff12-e6f9-4b3e-b991-402091ad992e"
       },
       "outputs": [
         {
@@ -360,23 +364,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 25
         }
       ],
       "source": [
         "# 7. Cache the the temporary table home_sales.\n",
-        "spark.sql(\"cache table home_sales_tempview\")"
+        "spark.sql(\"cache table home_sales\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 26,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61c2fdcd-7421-4873-e61b-5349bec9fda9"
+        "outputId": "622c4315-4afc-4b67-9a34-4f364fc75527"
       },
       "outputs": [
         {
@@ -387,23 +391,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 26
         }
       ],
       "source": [
         "# 8. Check if the table is cached.\n",
-        "spark.catalog.isCached('home_sales_tempview')"
+        "spark.catalog.isCached('home_sales')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "42094e71-ab6d-4597-dee1-bd1e3289da70"
+        "outputId": "18d506b4-890f-4a57-ac49-1d7aa97b1f1b"
       },
       "outputs": [
         {
@@ -436,7 +440,7 @@
             "+----------------+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.631819486618042 seconds ---\n"
+            "--- 1.046703577041626 seconds ---\n"
           ]
         }
       ],
@@ -446,63 +450,94 @@
         "# having an average home price greater than or equal to $350,000.\n",
         "# Determine the runtime and compare it to the uncached runtime.\n",
         "\n",
+        "# Get the current time\n",
         "start_time = time.time()\n",
         "\n",
-        "# Repeating the same code as for the previous table\n",
-        "spark.sql(\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales_tempview WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\").show()\n",
+        "# Repeating the same query as for the previous table\n",
+        "spark.sql(\"\"\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM home_sales WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\"\"\").show()\n",
         "\n",
+        "# Print out the runtime\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
       "outputs": [],
       "source": [
-        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n"
+        "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data\n",
+        "df.write.partitionBy(\"date_built\").mode(\"overwrite\").parquet(\"parket_delayed_partitioned\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
       "outputs": [],
       "source": [
-        "# 11. Read the parquet formatted data.\n"
+        "# 11. Read the parquet formatted data.\n",
+        "p_df=spark.read.parquet('parket_delayed_partitioned')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
       "outputs": [],
       "source": [
-        "# 12. Create a temporary table for the parquet data.\n"
+        "# 12. Create a temporary table for the parquet data.\n",
+        "p_df.createOrReplaceTempView('p_delays_p')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "d6748ea6-d70a-41fd-dcb8-c214a85e949e"
+        "outputId": "7a14a0ab-a655-46dc-8d8c-2fa4975b31b4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--- 7.104873657226562e-05 seconds ---\n"
+            "+----------------+----------+\n",
+            "|Home_View_Rating| Avg_Price|\n",
+            "+----------------+----------+\n",
+            "|              99|1061201.42|\n",
+            "|              98|1053739.33|\n",
+            "|              97|1129040.15|\n",
+            "|              96|1017815.92|\n",
+            "|              95| 1054325.6|\n",
+            "|              94| 1033536.2|\n",
+            "|              93|1026006.06|\n",
+            "|              92| 970402.55|\n",
+            "|              91|1137372.73|\n",
+            "|              90|1062654.16|\n",
+            "|              89|1107839.15|\n",
+            "|              88|1031719.35|\n",
+            "|              87| 1072285.2|\n",
+            "|              86|1070444.25|\n",
+            "|              85|1056336.74|\n",
+            "|              84|1117233.13|\n",
+            "|              83|1033965.93|\n",
+            "|              82| 1063498.0|\n",
+            "|              81|1053472.79|\n",
+            "|              80| 991767.38|\n",
+            "+----------------+----------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "--- 0.9665319919586182 seconds ---\n"
           ]
         }
       ],
@@ -512,10 +547,13 @@
         "# having an average home price greater than or equal to $350,000.\n",
         "# Determine the runtime and compare it to the cached runtime.\n",
         "\n",
+        "# Get the current time\n",
         "start_time = time.time()\n",
         "\n",
+        "# Query that calculates the avg price of a home per view rating using the parquet DataFrame\n",
+        "spark.sql(\"\"\"SELECT LPAD(view, 2, '0') AS Home_View_Rating, ROUND(AVG(price), 2) AS Avg_Price FROM p_delays_p WHERE price >= 350000 GROUP BY 1 ORDER BY Home_View_Rating DESC\"\"\").show()\n",
         "\n",
-        "\n",
+        "# Print out the runtime\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
@@ -549,7 +587,10 @@
         "id": "Si-BNruRUGK3"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Write out a csv file from Spark\n",
+        "df.write.csv('out_home_sales_revised.csv', mode='overwrite')"
+      ]
     }
   ],
   "metadata": {
